# yfm-editor

./: .gitignore  LICENSE  README.md  THIRD-PARTY-NOTICES.md  package-lock.json  package.json
content/: sample.md
scripts/: run-tauri.mjs
src/: App.tsx  i18n.ts  main.tsx  preferences.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/api/: client.ts
src/components/: EditorPane.tsx
